	- remove support to uLaw-encoded output
	- extend note range to full 10-octave range
	- extensive code refactoring
	- rewrite MMCMP decompressor to be endian-safe
	- add regression tests
	- add built-in zip file decompressor
	- add built-in gzip file decompressor
	- add built-in compress file decompressor
	- add library regression tests
	- add support to IT envelope carry
	- fix interpolation and sample loop processing
	- fix S404 depacker integration
	- fix note delay effect
	- fix FT2 old instrument volume quirk
	- fix instrument envelope loops (Storlek test #24)
	- fix IT tremor effect (Storlek tests #12 and #13)
	- fix IT global volume (Storlek test #16)
	- fix IT stray tone portamento handling (Storlek test #23)
	- fix IT unified pitch slide memory (Storlek test #25)
	- fix IT retrigger effect (Storlek test #15)
	- fix IT filters

3.5.0 (20120127):
	- fix AMF 1.0 module loading (reported by Andre Timmermans), probe
	  for sample loop size
	- fix AMF 1.1+ sample loops when loop start is zero
	- fix AMF track index including track 0 as empty track (reported by
	  Andre Timmermans)
	- fix AMF tremolo effect (reported by Andre Timmermans)
	- fix AMF pitchbend effects (reported by Andre Timmermans)
	- fix AMF volume slide effect
	- fix AMF track allocation
	- fix OpenBSD driver configuration
	- fix patern delay + pattern break command (reported by The Welder)
	- fix memory leaks found by cppcheck (reported by Paul Wise)
	- fix XM note cut on invalid instrument (reported by Benjamin Shadwick)
	- fix invalid memory access in case of mismatched track/pattern lengths
	- fix uninitialized values when loading BoobieSqueezer XM modules
	- fix subinstrument mapping for certain parameters
	- fix invalid memory access in The Player loader
	- fix plugin for Audacious 2.5.4
	- add support to DSMS mod files
	- add YM2149 emulator and improved chip sound support
	- add support to ZX Spectrum AY-3-8192 chiptunes
	- add ZX Spectrum Soundtracker module loader

3.4.1 (20110813):